GearsetPOC/force-app/main/default/objects/B2b_ReductionGrid__c/B2b_ReductionGrid__c.object-meta.xml
<CustomObject>
    <description>Custom object migrated from Thango as part of the Eurostar Delta migration project. Eurostar Jira ref DEIS-130</description>
    <label>Discount Matrix</label>
    <nameField>
        <displayFormat>DM-{0000}</displayFormat>
        <label>Discount Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>