GearsetPOC/force-app/main/default/objects/B2b_ReductionGrid__c/fields/B2b_Class__c.field-meta.xml
<CustomField>
    <fullName>B2b_Class__c</fullName>
    <label>Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>