GearsetPOC/force-app/main/default/objects/B2b_ReductionGrid__c/fields/B2b_MaxNumberOfTickets__c.field-meta.xml
<CustomField>
    <fullName>B2b_MaxNumberOfTickets__c</fullName>
    <label>Max Number Of Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>