GearsetPOC/force-app/main/default/objects/B2b_ReductionGrid__c/fields/B2b_MaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>B2b_MaxPercentage__c</fullName>
    <label>Max Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>