GearsetPOC/force-app/main/default/objects/B2b_ReductionGrid__c/fields/B2b_Segment__c.field-meta.xml
<CustomField>
    <fullName>B2b_Segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>