GearsetPOC/force-app/main/default/objects/B2b_ReductionGrid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B2b_Segment__c</columns>
    <columns>B2b_Route__c</columns>
    <columns>B2b_Class__c</columns>
    <columns>B2b_MinNumberOfTickets__c</columns>
    <columns>B2b_MaxNumberOfTickets__c</columns>
    <columns>B2b_MaxPercentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>